fix menu positioning on mobile

--- a/assets/css/pages-style.css
+++ b/assets/css/pages-style.css
@@ -388,6 +388,7 @@
     border: 0;
     margin: 0;
     overflow: visible;
+    float: right;
    }
 
 
